Fix padding issues, align text and image

--- a/src/containers/LandingPage/Navbar/styles.scss
+++ b/src/containers/LandingPage/Navbar/styles.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
-    max-width: 86rem;
+    max-width: 100rem;
     padding: $space-medium;
 
     ul {
